[project]
name = "python-pylontech"
version = "0.4.0"
description = "Interfaces with Pylontech Batteries using RS485 protocol"
license="MIT"
keywords=["pylontech", "pylon", "rs485", "lithium battery", "US2000", "US2000C", "US3000", "US5000"]
url="http://github.com/Frankkkkk/python-pylontech"

authors = [
    {name = "Frank Villaro-Dixon",email= "frank@villaro-dixon.eu"},
    {name = "Pavel Shirshov",email = "pshirshov@eml.cc"}

]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    'pyserial', 'construct', 'standard-telnetlib', 'rich'
]

[tool.poetry]
packages = [{include = "python-pylontech", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
